fix: tagit css too small for placeholder

--- a/core_explore_keyword_app/static/core_explore_keyword_app/user/css/search/search.css
+++ b/core_explore_keyword_app/static/core_explore_keyword_app/user/css/search/search.css
@@ -15,7 +15,7 @@ ul.tagit li.tagit-choice-editable {
 }
 
 li.tagit-new{
-    width: 20em;
+    width: 40em;
 }
 
 .tagit-close{
